--- a/app/src/main/res/layout/activity_cource.xml
+++ b/app/src/main/res/layout/activity_cource.xml
@@ -1,7 +1,17 @@
-<fragment xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:id="@+id/map"
-    tools:context="com.cyberagent.courseshare.CourceActivity"
-    android:name="com.google.android.gms.maps.SupportMapFragment"/>
+<?xml version="1.0" encoding="utf-8"?>
+
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+	android:orientation="vertical"
+	android:layout_width="fill_parent"
+	android:layout_height="fill_parent">
+
+	<fragment xmlns:android="http://schemas.android.com/apk/res/android"
+		xmlns:tools="http://schemas.android.com/tools"
+		android:layout_width="match_parent"
+		android:layout_height="match_parent"
+		android:id="@+id/map"
+		tools:context="com.cyberagent.courseshare.CourceActivity"
+		android:name="com.google.android.gms.maps.SupportMapFragment"/>
+
+</LinearLayout>
+
