--- a/app/src/main/res/layout/course_custom_info_window.xml
+++ b/app/src/main/res/layout/course_custom_info_window.xml
@@ -42,6 +42,12 @@
 			android:textColor="#ffeeeeee"
 			android:textSize="14dp"
 			android:maxLines="2" />
+
+		<Button
+			android:layout_width="wrap_content"
+			android:layout_height="wrap_content"
+			android:text="寄り道する"
+			android:id="@+id/btn_drop_in"/>
 	</LinearLayout>
 
 </LinearLayout>
