--- a/app/src/main/res/layout/activity_cource.xml
+++ b/app/src/main/res/layout/activity_cource.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<com.cyberagent.courseshare.MapWrapperLayout xmlns:android="http://schemas.android.com/apk/res/android"
 	android:orientation="vertical"
 	android:layout_width="fill_parent"
 	android:layout_height="fill_parent">
@@ -13,5 +13,5 @@
 		tools:context="com.cyberagent.courseshare.CourceActivity"
 		android:name="com.google.android.gms.maps.SupportMapFragment"/>
 
-</LinearLayout>
+</com.cyberagent.courseshare.MapWrapperLayout>
 
