--- a/app/src/main/res/layout/course_custom_info_window.xml
+++ b/app/src/main/res/layout/course_custom_info_window.xml
@@ -47,6 +47,8 @@
 			android:layout_width="wrap_content"
 			android:layout_height="wrap_content"
 			android:text="寄り道する"
+			android:textColor="#FFFFFF"
+			android:background="@drawable/btn_ok"
 			android:id="@+id/btn_drop_in"/>
 	</LinearLayout>
 
