--- a/app/src/debug/res/values/google_maps_api.xml
+++ b/app/src/debug/res/values/google_maps_api.xml
@@ -15,4 +15,5 @@ https://console.developers.google.com/flows/enableapi?apiid=maps_android_backend
     --></string>
 
     <string name="google_maps_key" templateMergeStrategy="preserve">AIzaSyCrGaab-hNNst1kGS8L2Qf9NV77VEIapPo</string>
+	<string name="google_api_key">AIzaSyAFmAPTBebdVwG2tlkBIIGaM_gowOuu62E</string>
 </resources>
