--- a/app/src/main/res/layout/activity_cource.xml
+++ b/app/src/main/res/layout/activity_cource.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<com.cyberagent.courseshare.CourseDrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
 		android:id="@+id/drawer_layout"
 		android:layout_width="match_parent"
 		android:layout_height="match_parent" >
@@ -68,7 +68,8 @@
 		<com.cyberagent.courseshare.SortableListView
 			android:layout_width="match_parent"
 			android:layout_height="wrap_content"
-			android:id="@+id/waypoint_list"/>
+			android:id="@+id/waypoint_list"
+			android:background="#CCCCCC"/>
 		<RatingBar
 			android:id="@+id/ratingbar"
 			android:layout_width="wrap_content"
@@ -81,5 +82,5 @@
 			android:stepSize="0.5"/>
 	</LinearLayout>
 
-</android.support.v4.widget.DrawerLayout>
+</com.cyberagent.courseshare.CourseDrawerLayout>
 
