--- a/app/src/main/res/layout/course_custom_info_window.xml
+++ b/app/src/main/res/layout/course_custom_info_window.xml
@@ -11,10 +11,11 @@
 
 	<ImageView
 		android:id="@+id/icon"
-		android:layout_width="wrap_content"
-		android:layout_height="wrap_content"
+		android:layout_width="100dp"
+		android:layout_height="100dp"
 		android:adjustViewBounds="true"
-		android:layout_marginRight="5dp">
+		android:layout_marginRight="5dp"
+		android:src="@drawable/loading_img">
 	</ImageView>
 
 	<LinearLayout
@@ -32,7 +33,8 @@
 			android:textColor="#ffffffff"
 			android:textSize="14dp"
 			android:textStyle="bold"
-			android:layout_marginBottom="5dp"/>
+			android:layout_marginBottom="5dp"
+			android:text="場所の名前"/>
 
 		<TextView
 			android:id="@+id/snippet"
@@ -41,7 +43,8 @@
 			android:ellipsize="end"
 			android:textColor="#ffeeeeee"
 			android:textSize="14dp"
-			android:maxLines="2" />
+			android:maxLines="2"
+			android:text="この場所の説明です。この場所の説明です。この場所の説明です。"/>
 
 		<Button
 			android:layout_width="wrap_content"
