--- a/app/src/main/res/layout/activity_first.xml
+++ b/app/src/main/res/layout/activity_first.xml
@@ -14,8 +14,9 @@
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="よりみち検索"
+        android:text="どろっぴん"
         android:id="@+id/appTitle"
+        android:gravity="center"
         android:textSize="15pt"
         android:layout_gravity="center_horizontal"
         />
@@ -34,6 +35,7 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal"
             android:text="出発"
+            android:layout_marginLeft="10dp"
             android:textColor="@color/white"
             android:background="@drawable/start_text"/>
 
@@ -51,8 +53,9 @@
             android:text="現在地"
             android:hint="出発地"
             android:singleLine="true"
+            android:layout_weight="1"
             android:gravity="center_vertical"
-            android:layout_gravity="center_horizontal"
+            android:layout_gravity="center"
             bootstrap:bb_roundedCorners ="true"
             bootstrap:bb_icon_right="fa-location-arrow"
             bootstrap:bb_size="small"
@@ -63,7 +66,7 @@
             android:id="@+id/startButton"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_margin="10dp"
+            android:layout_marginRight="10dp"
             android:text="現在地"
             android:layout_gravity="center_horizontal"
             bootstrap:bb_roundedCorners ="true"
@@ -81,9 +84,9 @@
         <TextView
             android:id="@+id/end_text"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center_horizontal"
+            android:layout_height="match_parent"
             android:text="到着"
+            android:layout_marginLeft="10dp"
             android:textColor="@color/white"
             android:background="@drawable/end_text"/>
 
@@ -94,8 +97,9 @@
             android:id="@+id/goal"
             android:hint="目的地"
             android:singleLine="true"
+            android:layout_weight="1"
             android:gravity="center_vertical"
-            android:layout_gravity="center_horizontal"
+            android:layout_gravity="center"
             bootstrap:bb_roundedCorners ="true"
             bootstrap:bb_icon_right="fa-location-arrow"
             bootstrap:bb_size="small"
@@ -106,8 +110,8 @@
             android:id="@+id/goalButton"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_margin="10dp"
             android:text="現在地"
+            android:layout_marginRight="10dp"
             android:layout_gravity="center_horizontal"
             bootstrap:bb_roundedCorners ="true"
             bootstrap:bb_icon_right="fa-location-arrow"
@@ -122,7 +126,7 @@
         android:layout_height="wrap_content"
         android:layout_margin="10dp"
         android:text="空き時間"
-        android:layout_gravity="center_horizontal"
+        android:layout_gravity="center"
         bootstrap:bb_roundedCorners ="true"
         bootstrap:bb_icon_right="fa-angle-down"
         bootstrap:bb_type="success" />
@@ -137,7 +141,8 @@
         android:layout_gravity="center_horizontal"
         android:text="よりみち"
         android:textColor="@color/white"
-        android:background="@drawable/end_text"/>
+        android:background="@drawable/transitpoint_text"
+        />
 
     <Button
         android:layout_width="match_parent"
