--- a/app/src/main/res/layout/activity_first.xml
+++ b/app/src/main/res/layout/activity_first.xml
@@ -3,15 +3,16 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:bootstrap="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_width="fill_parent"
+    android:layout_height="fill_parent"
     android:orientation="vertical"
     android:weightSum="1"
     android:focusableInTouchMode="true"
+	android:baselineAligned="false"
     android:id="@+id/firstActivity"
     tools:context=".FirstActivity">
 
-    <TextView
+    <!--<TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="どろっぴん"
@@ -19,9 +20,18 @@
         android:gravity="center"
         android:textSize="15pt"
         android:layout_gravity="center_horizontal"
-        />
+        />-->
 
-
+	<ImageView
+		android:id="@+id/top_title"
+		android:layout_width="match_parent"
+		android:layout_height="wrap_content"
+		android:layout_gravity="center_horizontal"
+		android:src="@drawable/dropin"
+		android:background="#53cc91"
+		android:layout_marginBottom="20dp"
+		android:paddingTop="15dp"
+		android:paddingBottom="15dp"/>
 
     <LinearLayout
         xmlns:android="http://schemas.android.com/apk/res/android"
@@ -32,12 +42,15 @@
         <TextView
             android:id="@+id/start_text"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
             android:layout_gravity="center_horizontal"
+			android:gravity="center_vertical"
             android:text="出発"
             android:layout_marginLeft="10dp"
             android:textColor="@color/white"
-            android:background="@drawable/start_text"/>
+            android:background="#53cc91"
+			android:paddingLeft="10dp"
+			android:paddingRight="10dp"/>
 
         <!--<EditText-->
             <!--android:layout_width="200dp"-->
@@ -81,14 +94,26 @@
         android:layout_height="wrap_content"
         android:orientation="horizontal"
         android:layout_marginTop="10dp">
-        <TextView
+        <!--<TextView
             android:id="@+id/end_text"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:text="到着"
             android:layout_marginLeft="10dp"
             android:textColor="@color/white"
-            android:background="@drawable/end_text"/>
+            android:background="@drawable/end_text"/>-->
+		<TextView
+			android:id="@+id/end_text"
+			android:layout_width="wrap_content"
+			android:layout_height="match_parent"
+			android:layout_gravity="center_horizontal"
+			android:gravity="center_vertical"
+			android:text="到着"
+			android:layout_marginLeft="10dp"
+			android:textColor="@color/white"
+			android:background="#53cc91"
+			android:paddingLeft="10dp"
+			android:paddingRight="10dp"/>
 
 
         <com.beardedhen.androidbootstrap.BootstrapEditText
@@ -124,7 +149,7 @@
         android:id="@+id/timeLeftButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_margin="10dp"
+        android:layout_margin="20dp"
         android:text="空き時間"
         android:layout_gravity="center"
         bootstrap:bb_roundedCorners ="true"
@@ -133,8 +158,9 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-    <TextView
+        android:layout_height="wrap_content"
+		>
+    <!--<TextView
         android:id="@+id/transitPoint_text"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -142,7 +168,19 @@
         android:text="よりみち"
         android:textColor="@color/white"
         android:background="@drawable/transitpoint_text"
-        />
+        />-->
+		<TextView
+			android:id="@+id/transitPoint_text"
+			android:layout_width="wrap_content"
+			android:layout_height="match_parent"
+			android:layout_gravity="center_horizontal"
+			android:gravity="center_vertical"
+			android:text="よりみち"
+			android:layout_marginLeft="10dp"
+			android:textColor="@color/white"
+			android:background="#53cc91"
+			android:paddingLeft="10dp"
+			android:paddingRight="10dp"/>
 
     <Button
         android:layout_width="match_parent"
@@ -165,14 +203,27 @@
     <!--android:textSize="32sp"-->
     <!--bootstrap:fa_icon="fa-github" />-->
 
-    <Button
-        android:id="@+id/searchButton"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="20dp"
-        android:text="検索"
-        android:textColor="@color/white"
-        android:background="@drawable/searchbutton_customize"/>
+	<LinearLayout
+		android:layout_width="match_parent"
+		android:layout_height="match_parent"
+		android:layout_gravity="bottom"
+		android:gravity="bottom"
+		android:orientation="vertical">
+		<Button
+			android:id="@+id/searchButton"
+			android:layout_width="match_parent"
+			android:layout_height="wrap_content"
+			android:padding="20dp"
+			android:text="検索"
+			android:textColor="@color/white"
+			android:textSize="40dp"
+			android:background="@drawable/searchbutton_customize"/>
 
+		<TextView
+			android:layout_width="match_parent"
+			android:layout_height="80dp"
+			android:background="#53cc91"
+			/>
+	</LinearLayout>
 
 </LinearLayout>
