--- a/app/src/debug/res/values/google_maps_api.xml
+++ b/app/src/debug/res/values/google_maps_api.xml
@@ -15,5 +15,7 @@ https://console.developers.google.com/flows/enableapi?apiid=maps_android_backend
     --></string>
 
     <string name="google_maps_key" templateMergeStrategy="preserve">AIzaSyCrGaab-hNNst1kGS8L2Qf9NV77VEIapPo</string>
-	<string name="google_api_key">AIzaSyAFmAPTBebdVwG2tlkBIIGaM_gowOuu62E</string>
+	<!--<string name="google_api_key">AIzaSyAFmAPTBebdVwG2tlkBIIGaM_gowOuu62E</string>-->
+    <string name="google_api_key">AIzaSyAN_B0_xjV4FP4_POmqV8djx_ALEdgpBtc</string>
+
 </resources>
