--- a/app/src/main/res/layout/activity_search.xml
+++ b/app/src/main/res/layout/activity_search.xml
@@ -30,6 +30,7 @@
     </LinearLayout>
 
     <LinearLayout
+		android:id="@+id/btn_list"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal">
